--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tic_tac_toe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Venugopal296/tic_tac_toe.git",
   "dependencies": {
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -15,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "eslintConfig": {
     "extends": "react-app"
